--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,74 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  display: grid;
+  place-items: center;
+  margin-block: 10rem;
+  background-color: rgb(240, 240, 240);
+}
+
+.content {
+  width: 480px;
+  background-color: rgb(200, 240, 230);
+  padding: 2rem;
+  border-radius: 2rem;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+label {
+  margin-top: 1rem;
+}
+
+label,
+select {
+  color: rgb(40, 40, 40);
+}
+
+input,
+select {
+  outline: none;
+  font-size: 1rem;
+  padding-inline: 0.5rem;
+  padding-block: 0.25rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: rgb(230, 255, 245);
+}
+
+label,
+input,
+select {
+  width: 320px;
+}
+
+button {
+  padding-block: 0.5rem;
+  padding-inline: 1rem;
+  margin-top: 1rem;
+  font-size: 1.1rem;
+  font-weight: 300;
+  background-color: rgb(147, 204, 226);
+  border-radius: 1rem;
+  border: none;
+  cursor: pointer;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+button:hover {
+  background-color: rgb(142, 219, 255);
+}
+
+button:active {
+  background-color: rgb(126, 175, 194);
 }
