--- a/src/styles.css
+++ b/src/styles.css
@@ -10,16 +10,16 @@
 body {
   display: grid;
   place-items: center;
-  margin-block: 10rem;
+  margin-block: 8rem;
   background-color: rgb(240, 240, 240);
 }
 
 .content {
   width: 480px;
-  background-color: rgb(200, 240, 230);
-  padding: 2rem;
+  background-color: rgb(82,109,133);
+  padding-block: 2rem;
   border-radius: 2rem;
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.3), 0 5px 8px -2px rgba(0, 0, 0, 0.2);
 }
 
 form {
@@ -33,35 +33,37 @@ label {
   margin-top: 1rem;
 }
 
-label,
-select {
-  color: rgb(40, 40, 40);
+input {
+  color: rgb(30, 30, 30);
+}
+
+label {
+  color: rgb(240, 240, 240);
 }
 
 input,
 select {
   outline: none;
-  font-size: 1rem;
-  padding-inline: 0.5rem;
-  padding-block: 0.25rem;
+  font-size: 1.1rem;
+  padding: 0.5rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: rgb(230, 255, 245);
+  background-color: rgb(230, 250, 250);
 }
 
 label,
 input,
 select {
-  width: 320px;
+  width: 300px;
 }
 
 button {
   padding-block: 0.5rem;
-  padding-inline: 1rem;
+  padding-inline: 2rem;
   margin-top: 1rem;
   font-size: 1.1rem;
   font-weight: 300;
-  background-color: rgb(147, 204, 226);
+  background-color: rgb(149, 210, 235);
   border-radius: 1rem;
   border: none;
   cursor: pointer;
@@ -73,5 +75,5 @@ button:hover {
 }
 
 button:active {
-  background-color: rgb(126, 175, 194);
+  background-color: rgb(149, 198, 218);
 }
